web/src/styles/base.css
:root {
  --bp-sm: 320px;
  --bp-md: 768px;
  --bp-lg: 1240px;

  --gap: 32px;

  --unit-1: 3px;
  --unit-a: var(--unit-1);
  --unit-b: calc(var(--unit-1) * 2);
  --unit-c: calc(var(--unit-1) * 4);
  --unit-d: calc(var(--unit-1) * 8);
  --unit-e: calc(var(--unit-1) * 11);
  --unit-f: calc(var(--unit-1) * 21);
  --unit-g: calc(var(--unit-1) * 21);
  --unit-h: calc(var(--unit-1) * 21);

  /* Colors */
  --c-brand: #f53d00;
  --c-brand--dark: #d32d00;

  /* Primary */
  --c-navy: #2b2c58;
  --c-seaGreen: #30758f;
  --c-seaGreen--dark: #265e73;
  --c-freshBlue: #08b2e3;
  --c-freshBlue--dark: #009ac6;

  /* Secondary */
  --c-green: #60b34f;
  --c-yellow: #ffe225;
  --c-orange: #fd7d39;
  --c-lavender: #d9a1dc;

  /* Tertiary */
  --c-cream: #e5d2c3;
  --c-tan: #ebe1d7;
  --c-ivory: #f1f0ea;
  --c-porcelain: #fffffc;

  /* Monochromatic */
  --c-charcoal: #2b2b2b;
  --c-black: #000000;
  --c-iron: #8e9291;
  --c-steel: #6b6b6b;
  --c-grey-500: #999999;
  --c-smoke: #c5c7c4;
  --c-smoke-dark: #afaeae;
  --c-fog: #e6e6e6;
  --c-white: var(--c-ivory);

  --c-footerBg: #f9f4ec;

  --f-h1--size: 32px;
  --f-h1--lineHeight: 40px;
  --f-h2--size: 32px;
  --f-h2--lineHeight: 40px;
  --f-h3--size: 24px;
  --f-h3--lineHeight: 28px;

  --f-b0--size: 20px;
  --f-b0--lineHeight: 20px;
  --f-b1--size: 16px;
  --f-b1--lineHeight: 20px;
  --f-b2--size: 16px;
  --f-b2--lineHeight: 20px;

  --bg-default: var(--c-porcelain);
}

@media (min-width: 768px) {
  :root {
    --unit-g: 108px;
    --unit-h: 120px;
  }
}

@media (min-width: 1240px) {
  :root {
    --unit-g: 120px;
    --unit-h: 140px;

    --f-h1--size: 40px;
    --f-h1--lineHeight: 46px;
    --f-b0--size: 20px;
    --f-b0--lineHeight: 20px;
    --f-b2--size: 14px;
    --f-b2--lineHeight: 18px;
  }
}

@layer base {
  html,
  body {
    min-height: 100vh;
  }

  body {
    -webkit-tap-highlight-color: transparent;
    background-color: var(--bg-default);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: var(--c-charcoal);
    @apply text-b2;
    @apply font-light;
    @apply m-0;
    width: 100%;
    display: flex;
    flex-direction: column;

    &.menu-is-open {
      position: absolute;
      width: 100%;
      height: 100%;
      overflow: hidden;
    }
  }

  input,
  select,
  option,
  textarea {
    @apply text-b2;
    @apply font-light;
  }

  /* purgecss start ignore */
  #___gatsby,
  #gatsby-focus-wrapper,
  #gatsby-focus-wrapper > div:first-child {
    flex: 1;
    display: flex;
    flex-direction: column;
  }
  /* purgecss end ignore */

  main {
    flex: 1;
  }

  a {
    color: var(--c-brand);
    text-decoration: none;

    &:hover,
    &:active {
      color: var(--c-brand--dark);
    }
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply m-0;
  }

  h1 {
    @apply f-h1;
    @apply font-heavy;
  }

  h2 {
    @apply f-h2;
    @apply font-heavy;
  }

  h3 {
    @apply f-h3;
    @apply font-heavy;
  }

  h4 {
    @apply f-b1;
    @apply font-heavy;
  }

  h5 {
    @apply f-b2;
    @apply font-heavy;
  }

  blockquote p:before {
    content: '“';
  }
  blockquote p:after {
    content: '”';
  }

  address {
    font-style: normal;
    font-family: inherit;
    color: currentColor;
  }

  /* FIX */
  .grid,
  .lg\:grid,
  .md\:grid {
    grid-column-gap: var(--gap);
  }

  .richText:not(.richText-title) {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    p {
      margin-bottom: 1em;
      &:last-child {
        margin-bottom: 0;
      }
    }

    p,
    ul,
    ol {
      color: var(--c-steel);
    }

    h3 {
      @apply mt-f;
      @apply mb-e;
    }

    a {
      @apply font-medium;
    }

    ul,
    ol {
      list-style: initial;
      margin-left: 1em;
      @apply list-outside;
    }
    ol {
      list-style: decimal;
    }
  }
}

.richText + .imageGrid {
  @apply mt-e;
}

select {
  outline: none;
  appearance: none;
  -webkit-appearance: none;
  background-color: transparent;
  margin: 0;
  cursor: inherit;
  line-height: inherit;

  &:focus {
    outline: none;
    @apply border-seaGreen;
  }
}

select::-ms-expand {
  display: none;
}

.select {
  display: grid;
  align-items: center;
  grid-template-areas: 'select';
}

select,
.select:after {
  grid-area: select;
}

.select:after {
  justify-self: end;
  content: '';
  margin-right: 0.75em;
  width: 0.5em;
  height: 0.35em;
  background-color: currentColor;
  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
}

.sr {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  word-wrap: normal;
}

.theme--dark,
.theme--dark .richText {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  .richText--title {
    color: var(--c-white);
  }
  p,
  ul,
  ol {
    color: var(--c-smoke);
  }

  a {
    color: var(--c-seaGreen);

    &:hover,
    &:active {
      color: var(--c-seaGreen--dark);
    }
  }

  /* changes any border color to seaGreen */
  [class*='border']:not('border-transparent') {
    border-color: var(--c-seaGreen);
  }
}

